[package]
name = "winit-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0"
glutin = { version = "<0.30.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
winit = "*"

[features]
glutin = ["dep:glutin"]
serde = ["dep:serde", "winit/serde"]
