[package]
name = "build-info-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
chrono = { version = "0.4", optional = true }
syn = { version = "2.0" }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }

[features]
default = []
chrono = ["dep:chrono"]
git = []
